--- a/public/static/style.css
+++ b/public/static/style.css
@@ -1,6 +1,6 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
-@import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('reader/normalize.min.css');
+@import url('reader/css.css');
+@import url('reader/font-awesome.min.css');
 
 * {
     box-sizing: border-box;
